# ButlerBot

./: .gitignore  ButlerBot.cabal  ButlerBot.hs  JsonParsing.hs  README.md  SendEmail.hs  Weather.hs  fabfile.py
